{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "4a564af1-33e2-458e-a006-b7be607df500",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "de851836-f28e-4fa6-8859-76fd81b6eacf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "873307c7-4a69-4f3a-ae5c-df876844782a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NormalAttack",
                    "type": "Button",
                    "id": "e42038bb-8d9e-427d-a8e7-56332df96fea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChargedAttack",
                    "type": "Button",
                    "id": "cc737330-f11d-40f3-bfa2-b93c595c970a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "8f8dea97-33ff-40b2-bd6b-704d4160e706",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "0b9259c4-0db6-4e2c-bb91-1ff77bb0e8aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "e084417a-fe4d-4893-90c2-46778ba7ac6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "597baf7b-d159-41c8-a41f-adc4396b93ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMap",
                    "type": "Button",
                    "id": "87f91229-f34a-47e0-b526-b81948f59b5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressEsc",
                    "type": "Button",
                    "id": "6268452b-3310-43fe-9ba6-312dc693bd27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollWheel",
                    "type": "Value",
                    "id": "93db456a-9c2b-4a00-9933-b8b5828455c5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenConsole",
                    "type": "Button",
                    "id": "be144f32-6a3e-48f6-ab63-b7cd564893cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a320dc5b-03bd-4fd1-80ca-d905d1d2adfe",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac829007-0f16-471c-ac06-9312abd68a44",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2ec0ba7-d3ae-4d31-8648-07174248baf2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NormalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "affeedf7-7859-4dcd-8f18-929ad0643a96",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ChargedAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf4c9ab9-aff1-40e7-81bc-f21ee8160940",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b872cf8-1f95-415d-861e-f9392f550a16",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ad86de2-9b23-4769-b6df-c29249d6f4f6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32fb6f79-8c04-405f-94fa-b53e017e950c",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a036acab-5a8b-46fb-80cd-061605de7655",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a8c38f8-4701-45b8-8fa0-0a5b9e1f8f98",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressEsc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aed8e6dd-6fc5-4cb2-b7f5-5ea6f1f41384",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4cdc78b-0a85-494d-b036-114d7d9dd91f",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "f7bb0cba-b8b8-45d9-b5f5-2e35b64b2c80",
            "actions": [
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "0bdd076f-a4ad-46ca-a9b8-6a6a3b2d062c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextInvPage",
                    "type": "Button",
                    "id": "2c3f63a5-0bf2-4b29-8a9e-21778d7fbc54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousInvPage",
                    "type": "Button",
                    "id": "92cb5b88-6c9d-46d3-b4e8-94ae995c75d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97790120-cde9-49a6-968b-2f6e4f5f353b",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71ba83f8-0c10-4764-808d-d7a2e167a303",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82ac87f1-8bb9-428e-8eb2-64d58b07c699",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextInvPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6bf572d-8264-4c06-832f-d1b46d181493",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousInvPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Map",
            "id": "e7bca92f-9ffa-4fa7-953f-f5f43d19f4e0",
            "actions": [
                {
                    "name": "CloseMap",
                    "type": "Button",
                    "id": "fbb65485-f709-46f4-b05c-5fb46ce782ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60080c22-268a-4782-807f-0e129905388c",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b48bc132-3d7a-4b64-bb00-3783aa3a1a39",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EscMenu",
            "id": "e37169ab-2141-45b2-b8f2-f908d6aff557",
            "actions": [
                {
                    "name": "CloseEscMenu",
                    "type": "Button",
                    "id": "0ca8e250-fb9b-4449-940f-96a8a6e8d7f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d892eaa-539b-4dfc-8dd2-c2450ff45628",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseEscMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogues",
            "id": "13693169-fd64-4564-8cb3-22f3f1eaf564",
            "actions": [
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "8f338682-d054-4015-bdd1-e1abfb8c4b8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "45d51a7b-f33d-42dc-9eeb-100fc6e623fc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e76799b-ed76-4fcc-ad24-ca380db3bf78",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c3eeb8c-021d-4d44-9602-268ceb191ae4",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Console",
            "id": "603d602c-3204-4ceb-b793-f08323fdb08b",
            "actions": [
                {
                    "name": "ConfirmInput",
                    "type": "Button",
                    "id": "e450c977-14c3-4b57-a5dc-fd84e9142756",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseConsole",
                    "type": "Button",
                    "id": "90cfe7cb-ed01-4d4f-b64b-61ae7bbe2ae7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8bb25595-3d85-4868-8009-b6f4f2305ab0",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "151aa0e2-aa5d-4c4e-ac2c-4039ddaec257",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WeaponEnhance",
            "id": "786a271a-798c-4dea-bf7e-fa0a52a6fcfa",
            "actions": [
                {
                    "name": "CloseWeapDetails",
                    "type": "Button",
                    "id": "20b44d29-2430-402b-876c-c04b394bd141",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8417ed63-a2e6-41d4-96f1-3c9ac7b24062",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseWeapDetails",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shop",
            "id": "564fdde7-9f9e-4373-9fde-06e56d97f720",
            "actions": [
                {
                    "name": "CloseShop",
                    "type": "Button",
                    "id": "c1f86ba7-376b-4482-bdff-b93eaab5c9a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a4cc679-c675-4c67-bf86-082b26262723",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ActiveBuffs",
            "id": "5304541b-3385-4a1e-9c54-4b324d2ffcc5",
            "actions": [
                {
                    "name": "ExitMenu",
                    "type": "Button",
                    "id": "3c55a18e-45e2-439a-b9e9-6a26ab1b4418",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ebf58d08-afae-4626-98bc-b8a8e9b5acfa",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}